master

0.7.1beta
- Zixaphir
  Fixed broken 4chan on fresh install
    I'm so sorry.

0.7beta
- Mayhem
  Use 4chan's API to fetch posts for:
    - Thread Updater.
    - Quote Inlining.
    - Quote Previewing.
    - Thread Expansion.
    - Comment Expansion.
  Fix compatibility with Scriptish's auto-udpater.
- Zixaphir
  Fixed auto updating
    (unrelated to similar 4chan x commit by Mayhem)
  Fixed posting with autohide enabled and style enabled.
  AppChan X now removes all 4chan CSS in head with style enabled.
  

0.6.3beta
- Zixaphir
  Disable inlined 4chan JS "extension".

0.6.2beta
- Mayhem
  Fix 4chan X. Blame moot.
  Fix thread updater
- seaweed
  Fix options button
- Zixaphir
  ~70 more mascots

0.6.1beta
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.

0.6beta
- Zixaphir
  Select / Clear All Mascots links
  Custom Checkboxes now apply to all checkboxes
  File input doesn't look default-y

0.5beta
- Zixaphir
  Fix text spoilers
  New Options
   -- Logo positions
   -- Banner positions
   -- Sidebar size
  New Themes
   -- ObsidianChan
   -- PaisleyChan
   -- Photon
   -- Zenburned

0.3beta
- Zixaphir
  New Theme:
   -- Minimalistic Mayhem
  Mascots (lots)
  Fixed broken options, like reply spacing
  Live editting of Style Options / Themes / Mascots

0.2beta
- Zixaphir
  Pagination options now work. Also fixed Board Navigation options.
  Cicle Checkboxes and On Side Pagination now work
  New Themes:
   -- AppChan
   -- BakaBT
   -- Blackberry Jam
   -- Midnight Caek
- Mayhem
  One-word-captcha: you don't need to input an extra space anymore, the true word will be duplicated.

0.1beta
- Zixaphir
  First 'stable' AppChan release. Little more than 4chan x + Style options. Based on 4chan x 2.34.8.